# collector-searcher

./: .gitignore  CMakeLists.txt  collector.c  data_generator.py  number_parser.c  number_parser.h  number_record.c  number_record.h  result_printer.py  searcher.c  set.c  set.h  throw_exception.c  throw_exception.h
